[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/pantallas/titulo 2.png" type="Texture" id=1]
[ext_resource path="res://assets/font/Gumball.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://assets/music/menu_ogg.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 71
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 120
font_data = ExtResource( 2 )

[node name="Menu" type="Node"]
script = ExtResource( 3 )

[node name="Titulo2" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Label" type="Label" parent="."]
margin_left = 634.0
margin_top = 34.0
margin_right = 989.0
margin_bottom = 177.0
custom_colors/font_color = Color( 0.203922, 0.0117647, 0.0117647, 1 )
custom_fonts/font = SubResource( 1 )
text = "nos 
   vemos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ost" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.975
autoplay = true

[node name="PositionDown" type="Position2D" parent="."]
position = Vector2( 513, 452 )

[node name="PositionUp" type="Position2D" parent="."]
position = Vector2( 513, 418 )

[node name="Start" type="Label" parent="."]
margin_left = 340.0
margin_top = 418.0
margin_right = 689.0
margin_bottom = 535.0
mouse_filter = 0
custom_fonts/font = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bep" type="AudioStreamPlayer" parent="."]
volume_db = -19.314
pitch_scale = 1.67

[connection signal="gui_input" from="Start" to="." method="_on_Start_gui_input"]
[connection signal="mouse_entered" from="Start" to="." method="_on_Start_mouse_entered"]
[connection signal="mouse_exited" from="Start" to="." method="_on_Start_mouse_exited"]
